--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link href="css/modules.css" rel="stylesheet">
 </head>
 <body>
-  <ul class="list-group">
+  <ol class="list-group">
 
-    <li><a href="#" class="focus">Owls</a>
+    <li><strong>Owls</strong>
       <ul class="list-group-inline">
         <li>Barn owls</li>
         <li>Long eared owl</li>
@@ -20,7 +20,7 @@
       </ul>
     </li>
 
-    <li><a href="#" class="focus">Herons</a>
+    <li><strong>Herons</strong>
       <ul class="list-group-inline">
         <li>Grey heron</li>
         <li>Great blue heron</li>
@@ -29,7 +29,7 @@
       </ul>
     </li>
 
-    <li><a href="#" class="focus">Hawks</a>
+    <li><strong>Hawks</strong>
       <ul class="list-group-inline">
         <li>Broad winged hawk</li>
         <li>Ferruginous hawk</li>
@@ -39,7 +39,7 @@
       </ul>
     </li>
 
-  </ul>
+  </ol>
 
 </body>
 </html>
